--- a/FastTech.LojaCardapio.Web/appsettings.json
+++ b/FastTech.LojaCardapio.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=LojaCardapio;Username=admin;Password=admin123"
+    //"DefaultConnection": "Host=localhost;Port=5432;Database=LojaCardapio;Username=admin;Password=admin123"
+    "DefaultConnection": "Host=postgres-cardapio-service;Port=5432;Database=LojaCardapio;Username=admin;Password=admin123"
   },
   "Logging": {
     "LogLevel": {
