--- a/FastTech.LojaCardapio.Web/appsettings.json
+++ b/FastTech.LojaCardapio.Web/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Identity": {
+    "Issuer": "FastTech.Usuarios",
+    "Audience": "FastTech.Usuarios.API",
+    "SecretKey": "2j6Iyi0RKR8XziYnJjaPENZY2C5l4E5mnx0K1ifJKZq0nHq13w",
+    "AccessTokenMinutes": 60,
+    "AccessRefreshTokenMinutes": 43200
+  }
 }
