--- a/FastTech.LojaCardapio.Web/Properties/launchSettings.json
+++ b/FastTech.LojaCardapio.Web/Properties/launchSettings.json
@@ -5,7 +5,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "JWT_SECRET_KEY": "2j6Iyi0RKR8XziYnJjaPENZY2C5l4E5mnx0K1ifJKZq0nHq13w"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5268"
@@ -15,7 +16,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "JWT_SECRET_KEY": "2j6Iyi0RKR8XziYnJjaPENZY2C5l4E5mnx0K1ifJKZq0nHq13w"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7059;http://localhost:5268"
@@ -25,7 +27,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "JWT_SECRET_KEY": "2j6Iyi0RKR8XziYnJjaPENZY2C5l4E5mnx0K1ifJKZq0nHq13w"
       }
     },
     "Container (Dockerfile)": {
