--- a/FastTech.LojaCardapio.Web/appsettings.json
+++ b/FastTech.LojaCardapio.Web/appsettings.json
@@ -13,7 +13,7 @@
   "Identity": {
     "Issuer": "FastTech.Usuarios",
     "Audience": "FastTech.Usuarios.API",
-    "SecretKey": "2j6Iyi0RKR8XziYnJjaPENZY2C5l4E5mnx0K1ifJKZq0nHq13w",
+    "SecretKey": "",
     "AccessTokenMinutes": 60,
     "AccessRefreshTokenMinutes": 43200
   }
